--- a/css/troy.scss
+++ b/css/troy.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .navbar {
-    background: white;
+    background: wheat;
     padding: 1em;
 
     .logo {
@@ -55,6 +55,7 @@ section {
 
 .showcase {
     text-align: center;
+    background-color: whitesmoke;
 }
 
 .left-col {
@@ -116,12 +117,12 @@ ul.features-list {
         position: relative;
 
         &:before {
-            content: '';
+            content:"";
             left: -2em;
             position: absolute;
             width: 20px;
             height: 20px;
-            background-image: url('https://assets.codepen.io/2621168/bullet.svg');
+            background-image: url("../images/bullet.svg");
             background-size: contain;
             margin-right: .5em;
         }
@@ -146,8 +147,8 @@ ul.features-list {
         border-radius: 1em;
 
         img {
-            width: 5em;
-            height: 5em;
+            width: 6em;
+            height: 7em;
             border: 5px solid white;
             border-radius: 50%;
             margin-top: -4.5em;
@@ -155,6 +156,39 @@ ul.features-list {
     }
 
 }
+
+
+.feedback-section-about {
+    background: grey;
+    color: white;
+    padding: 100px;;
+    padding-bottom: 5px;
+
+    li {
+        background: red;
+        text-align: center;
+        padding: 2em 1em;
+        width: 100%;
+        height: 20%;
+        margin: 0 auto 5em auto;
+        border-radius: 1em;
+
+        img {
+            width: 19em;
+            height: 27em;
+            border: 5px solid white;
+            border-radius: 50%;
+            margin-top: -4.5em;
+        }
+    }
+
+}
+
+.about{
+    text-align: center;
+    padding: 0;
+}
+
 
 h2 {
     font-size: 2em;
@@ -241,6 +275,79 @@ nav {
   border-radius: 20px;
 }
 
+
+.about{
+    padding: 0;
+     .aboutbackground{
+        content: "";
+        position: relative;
+        width: 100%;
+        height: 50%;
+        background: url("../troygrouplogo.jpeg_updated.png");
+        left: .2em;
+        
+    }
+}
+
+footer{
+    background: wheat;
+    min-height: 50px;
+}
+
+.fa{
+    font-size: 50px !important ;
+    color: blue;
+}
+
+.aboutli{
+    margin-left: 5%;
+    li{background: white;
+        justify-content: center;
+        text-align: center;
+        padding: 32px 16px;
+        width: 20%;
+        height: 20%;
+        margin-top: 1px;
+        margin-bottom: 19px;
+        margin-right: 70px;
+        margin-left: 50px;
+        border-radius: 2em;
+    }
+}
+.vl {
+    border-left: 1px solid white;
+    height: 542px;
+    position: absolute;
+    left: 34%;
+    margin-left: -3px;
+    top: 63px;
+    
+  }
+
+  .vl1 {
+    border-left: 1px solid white;
+    height: 542px;
+    position: absolute;
+    right: 34%;
+    margin-left: -3px;
+    top: 63px;
+  }
+.aboutlidiv{
+    display: flex;
+    gap: 3rem;
+    
+    
+}
+.Book-Us-Now-cta1 a{
+    color: var();
+            border: 3px solid var(white);
+            font-weight: bold;
+            border-radius: 5em;
+            margin-top: -.2em;
+    background: var(--primary-color);
+
+
+}
 
 @media only screen and (min-width: 768px) {
 
@@ -401,11 +508,11 @@ nav {
         }
 
         &:after {
-            content: '';
+            content:"";
             position: absolute;
             width: 200px;
             height: 20em;
-            background: url('https://assets.codepen.io/2621168/dots.svg') no-repeat;
+            background: url("../images/dots.svg") no-repeat;
             left: 4.5em;
             top: 2em;
         }
