--- a/css/troy.scss
+++ b/css/troy.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 :root {
-    --primary-color:red;
+    // --primary-color:red;
 }
 
 body {
@@ -165,7 +165,7 @@ ul.features-list {
     padding-bottom: 5px;
 
     li {
-        background: red;
+        // background: red;
         text-align: center;
         padding: 2em 1em;
         width: 100%;
